import("//build/config/features.gni")
import("//build/config/ui.gni")
import("//build/config/crypto.gni")
import("//components/os_crypt/features.gni")
import("//components/spellcheck/spellcheck_build_features.gni")
import("//extensions/features/features.gni")
import("//media/media_options.gni")
import("//ppapi/features/features.gni")
import("//printing/features/features.gni")
import("//rlz/features/features.gni")

config("chromium_src_config") {
  if (is_clang) {
    cflags = [
      "-Wno-error",
      "-Wno-unknown-warning-option",
      "-Wno-parentheses-equality",
      "-Wno-unused-function",
      "-Wno-sometimes-uninitialized",
      "-Wno-pointer-sign",
      "-Wno-sign-compare",
      "-Wno-string-plus-int",
      "-Wno-unused-variable",
      "-Wno-deprecated-declarations",
      "-Wno-return-type",
      "-Wno-gnu-folding-constant",
      "-Wno-shift-negative-value",
      "-Wno-varargs", # https://git.io/v6Olj
      "-Wno-deprecated-declarations",
      "-Wno-deprecated-register",
      "-Wno-unused-private-field",
      "-Wno-unused-function",
    ]
  }
}

source_set("app") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = []

  if (is_win) {
    sources += [
      "//chrome/app/chrome_crash_reporter_client_win.cc",
      "//chrome/app/chrome_crash_reporter_client_win.h",
    ]
  } else {
    sources += [
      "//chrome/app/chrome_crash_reporter_client.cc",
      "//chrome/app/chrome_crash_reporter_client.h",
      "//chrome/app/chrome_crash_reporter_client_mac.mm",
    ]
  }

  deps = [
    "//base",
    "//chrome/common",
    "//components/metrics",
    "//components/crash/content/app",
    "//components/crash/content/browser",
    "//content/public/common",
  ]

  if (is_win) {
    deps += [
      "//chrome_elf",
    ]
  }

  if (is_linux) {
    deps += [
      "//components/upload_list",
      "//components/version_info",
    ]
  }
}

source_set("common") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = []
  deps = []

  if (enable_extensions) {
    sources += [
      "chrome/common/extensions/chrome_extensions_client.cc",
      "//chrome/common/extensions/chrome_extensions_client.h",
    ]

    deps += [
      "//electron/brave/common/extensions/api:extensions_features"
    ]
  }

  deps += [
    "//chrome/common",
  ]
}

source_set("renderer") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = [
    "chrome/renderer/content_settings_observer.cc",
    "chrome/renderer/content_settings_observer.h",
  ]

  if (enable_extensions) {
    sources += [
      "chrome/renderer/extensions/chrome_extensions_dispatcher_delegate.cc",
      "chrome/renderer/extensions/chrome_extensions_dispatcher_delegate.h",
    ]
  }

  deps = [
    "//content/public/common",
    "//chrome/renderer",
    "//components/content_settings/core/common",
    "//components/spellcheck:build_features",
    "//third_party/WebKit/public:blink_headers",
  ]

  if (enable_spellcheck) {
    deps += [ "//components/spellcheck/renderer:renderer" ]
  }
}

source_set("browser") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  public_deps = [
    "//content/public/browser",
  ]

  deps = [
    ":bookmarks",
    ":crashes_ui",
    ":devtools",
    ":downloads",
    ":favicon",
    ":history",
    ":metrics",
    ":password_manager",
    ":sessions",
    ":web_data",
    "chrome/browser/safe_browsing",
    "//electron/brave/browser:tab_manager",
    "//base",
    "//chrome/common",
    "//chrome/common:service_process_mojom",
    "//chrome/utility",
    "//components/certificate_transparency",
    "//components/crash/content/app",
    "//components/crash/core/browser",
    "//components/data_usage/core",
    "//components/keep_alive_registry",
    "//components/net_log",
    "//components/offline_items_collection/core",
    "//components/optimization_guide/proto:optimization_guide_proto",
    "//components/policy/core/common",
    "//components/prefs",
    "//components/ssl_config",
    "//components/spellcheck:build_features",
    "//components/safe_browsing:csd_proto",
    "//components/storage_monitor",
    "//content/public/browser",
    "//electron/atom/browser",
    "//ui/message_center",
    "//net:features",
    "//pdf",
  ]

  sources = [
    "chrome/browser/about_flags.cc",
    "//chrome/browser/about_flags.h",
    "//chrome/browser/browser_process.cc",
    "//chrome/browser/browser_process.h",
    "chrome/browser/browser_process_impl.cc",
    "//chrome/browser/browser_process_impl.h",
    "//chrome/browser/browser_shutdown.cc",
    "//chrome/browser/browser_shutdown.h",
    "//chrome/browser/chrome_notification_types.h",
    "//chrome/browser/chrome_service.cc",
    "//chrome/browser/chrome_service.h",
    "chrome/browser/custom_handlers/protocol_handler_registry.cc",
    "//chrome/browser/custom_handlers/protocol_handler_registry.h",
    "//chrome/browser/custom_handlers/protocol_handler_registry_factory.cc",
    "//chrome/browser/custom_handlers/protocol_handler_registry_factory.h",

    "chrome/browser/background/background_mode_manager.cc",
    "//chrome/browser/background/background_mode_manager.h",

    "//chrome/browser/chrome_device_client.cc",
    "//chrome/browser/chrome_device_client.h",

    # extensions
    "//chrome/browser/extensions/global_shortcut_listener.cc",
    "//chrome/browser/extensions/global_shortcut_listener.h",
    "//chrome/browser/extensions/global_shortcut_listener_mac.h",
    "//chrome/browser/extensions/global_shortcut_listener_mac.mm",
    "//chrome/browser/extensions/global_shortcut_listener_win.cc",
    "//chrome/browser/extensions/global_shortcut_listener_win.h",

    "//chrome/browser/file_select_helper.cc",
    "//chrome/browser/file_select_helper_mac.mm",
    "//chrome/browser/file_select_helper.h",

    "chrome/browser/first_run/first_run.cc",
    "//chrome/browser/first_run/first_run.h",
    "//chrome/browser/first_run/upgrade_util.h",
    "chrome/browser/first_run/upgrade_util.cc",

    "//chrome/browser/gpu/gpu_mode_manager.cc",
    "//chrome/browser/gpu/gpu_mode_manager.h",
    "//chrome/browser/gpu/gpu_profile_cache.h",

    "chrome/browser/io_thread.cc",
    "//chrome/browser/io_thread.h",

    "//chrome/browser/icon_loader.cc",
    "//chrome/browser/icon_loader.h",
    "//chrome/browser/icon_loader_mac.mm",
    "//chrome/browser/icon_loader_win.cc",
    "//chrome/browser/icon_manager.cc",
    "//chrome/browser/icon_manager.h",

    "//chrome/browser/net/chrome_extensions_network_delegate.cc",
    "//chrome/browser/net/chrome_extensions_network_delegate.h",
    "//chrome/browser/net/chrome_mojo_proxy_resolver_factory.cc",
    "//chrome/browser/net/chrome_mojo_proxy_resolver_factory.h",
    "//chrome/browser/net/default_network_context_params.cc",
    "//chrome/browser/net/default_network_context_params.h",
    "//chrome/browser/net/proxy_config_monitor.cc",
    "//chrome/browser/net/proxy_config_monitor.h",
    "//chrome/browser/net/proxy_service_factory.cc",
    "//chrome/browser/net/proxy_service_factory.h",
    "//chrome/browser/net/sth_distributor_provider.cc",
    "//chrome/browser/net/sth_distributor_provider.h",
    "//chrome/browser/net/system_network_context_manager.cc",
    "//chrome/browser/net/system_network_context_manager.h",

    "//chrome/browser/offline_items_collection/offline_content_aggregator_factory.cc",
    "//chrome/browser/offline_items_collection/offline_content_aggregator_factory.h",

    "//chrome/browser/prefs/chrome_command_line_pref_store.cc",
    "//chrome/browser/prefs/chrome_command_line_pref_store.h",

    "//chrome/browser/site_details.cc",
    "//chrome/browser/site_details.h",
    "//chrome/browser/ui/browser_finder.cc",
    "//chrome/browser/ui/browser_finder.h",
    "//chrome/browser/ui/browser_list.cc",
    "//chrome/browser/ui/browser_list.h",
    "chrome/browser/ui/browser.cc",
    "//chrome/browser/ui/browser.h",
    "chrome/browser/ui/browser_otr_state.cc",

    "//chrome/browser/ui/chrome_select_file_policy.h",
    "chrome/browser/ui/chrome_select_file_policy.cc",
    "//chrome/browser/ui/cocoa/ui_localizer.h",
    "//chrome/browser/ui/cocoa/ui_localizer.mm",

    "chrome/browser/ui/profile_error_dialog.cc",

    "//chrome/browser/ui/web_contents_sizer.cc",
    "//chrome/browser/ui/web_contents_sizer.h",
    "chrome/browser/ui/webui/chrome_web_ui_controller_factory.cc",
    "//chrome/browser/ui/webui/chrome_web_ui_controller_factory.h",

    "//chrome/browser/platform_util.h",
    "//chrome/browser/platform_util.cc",
    "//chrome/browser/platform_util_mac.mm",
    "//chrome/browser/platform_util_linux.cc",
    "//chrome/browser/platform_util_win.cc",

    "//chrome/browser/process_singleton_mac.mm",
    "//chrome/browser/process_singleton_posix.cc",
    "//chrome/browser/process_singleton_win.cc",
    "//chrome/browser/process_singleton.h",
    "//chrome/browser/renderer_host/chrome_extension_message_filter.cc",
    "//chrome/browser/renderer_host/chrome_extension_message_filter.h",
    "//chrome/browser/renderer_host/chrome_navigation_ui_data.cc",
    "//chrome/browser/renderer_host/chrome_navigation_ui_data.h",
    "//chrome/browser/speech/tts_controller.h",
    "//chrome/browser/speech/tts_controller_impl.cc",
    "//chrome/browser/speech/tts_controller_impl.h",
    "//chrome/browser/speech/tts_linux.cc",
    "//chrome/browser/speech/tts_mac.mm",
    "//chrome/browser/speech/tts_message_filter.cc",
    "//chrome/browser/speech/tts_message_filter.h",
    "//chrome/browser/speech/tts_platform.cc",
    "//chrome/browser/speech/tts_platform.h",
    "//chrome/browser/speech/tts_win.cc",
    "//chrome/browser/ui/browser_dialogs.h",
    "chrome/browser/ui/simple_message_box.cc",
    "chrome/browser/ui/user_manager.cc",
    "//chrome/browser/ui/user_manager.h",
    "//chrome/browser/ui/cocoa/color_chooser_mac.mm",
    "//chrome/browser/ui/zoom/chrome_zoom_level_prefs.cc",
    "//chrome/browser/ui/zoom/chrome_zoom_level_prefs.h",
    "//chrome/browser/content_settings/cookie_settings_factory.cc",
    "//chrome/browser/content_settings/cookie_settings_factory.h",
    "chrome/browser/content_settings/host_content_settings_map_factory.cc",
    "chrome/browser/content_settings/host_content_settings_map_factory.h",

    "//chrome/browser/ssl/security_state_tab_helper.cc",
    "//chrome/browser/ssl/security_state_tab_helper.h",
    "//chrome/browser/tab_contents/tab_util.cc",
    "//chrome/browser/tab_contents/tab_util.h",
    "//chrome/browser/win/chrome_process_finder.cc",
    "//chrome/browser/win/chrome_process_finder.h",

    "//chrome/browser/cache_stats_recorder.cc",
    "//chrome/browser/cache_stats_recorder.h",

    "//chrome/browser/upgrade_detector.cc",
    "//chrome/browser/upgrade_detector.h",
    "chrome/browser/upgrade_detector_impl.cc",
    "chrome/app/vector_icons/vector_icons.cc",
    "chrome/app/vector_icons/vector_icons.h",
    "//chrome/browser/service_process/service_process_control.cc",
    "//chrome/browser/service_process/service_process_control.h",
    "//chrome/browser/service_process/service_process_control_mac.mm",

    # these are not in a gn file anywhere for some reason
    "//components/policy/core/common/policy_service_stub.cc",
    "//components/policy/core/common/policy_service_stub.h",
  ]

  if (use_aura) {
    sources += [
      "//chrome/browser/platform_util_aura.cc",
    ]
  }

  if (is_win || is_mac) {
    sources += [
      "//chrome/browser/crash_upload_list/crash_upload_list_crashpad.cc",
      "//chrome/browser/crash_upload_list/crash_upload_list_crashpad.h",
    ]
  }

  if (is_win) {
    sources += [
      "//chrome/browser/win/browser_util.h",
      "//chrome/browser/win/browser_util.cc",
      "//chrome/browser/ui/views/color_chooser_dialog.cc",
      "//chrome/browser/ui/views/color_chooser_dialog.h",
      "//chrome/browser/ui/views/color_chooser_win.cc",
      "//chrome/browser/permissions/permission_request.cc",
      "//chrome/browser/permissions/permission_request.h",
      "chrome/browser/permissions/permission_request_manager.cc",
      "//chrome/browser/permissions/permission_request_manager.h",
      "//chrome/browser/printing/pdf_to_emf_converter.cc",
      "//chrome/browser/printing/pdf_to_emf_converter.h",
      "//chrome/browser/ui/views/certificate_viewer_win.cc",
    ]

    deps += [
      "//ui/shell_dialogs",
    ]
    libs = [
      "cryptui.lib",
    ]
  }

  if (is_linux) {
    sources += [
      "//chrome/browser/extensions/global_shortcut_listener_x11.cc",
      "//chrome/browser/extensions/global_shortcut_listener_x11.h",
      "chrome/browser/ui/process_singleton_dialog_linux.cc",
    ]
  }

  if (toolkit_views) {
    sources += [
      "//chrome/browser/ui/views/harmony/chrome_layout_provider.cc",
      "//chrome/browser/ui/views/harmony/chrome_layout_provider.h",
      "//chrome/browser/ui/views/harmony/chrome_typography.cc",
      "//chrome/browser/ui/views/harmony/chrome_typography.h",
      "//chrome/browser/ui/views/harmony/harmony_layout_provider.cc",
      "//chrome/browser/ui/views/harmony/harmony_layout_provider.h",
      "//chrome/browser/ui/views/harmony/harmony_typography_provider.cc",
      "//chrome/browser/ui/views/harmony/harmony_typography_provider.h",
    ]

    deps += [
      "//base",
      "//net:extras",
      "//net:net_browser_services",
      "//skia",
      "//ui/base",
      "//ui/events",
      "//ui/gfx",
      "//ui/gfx/geometry",
    ]
  }

  if (is_mac) {
    sources += [
      "//chrome/browser/ui/certificate_viewer_mac.h",
      "//chrome/browser/ui/certificate_viewer_mac.mm",
      "chrome/browser/ui/certificate_viewer_mac_views.mm",
    ]
    libs = [
      "SecurityInterface.framework",
    ]
  }

  if (enable_basic_printing || enable_print_preview) {
    sources += [
      "//chrome/browser/printing/background_printing_manager.cc",
      "//chrome/browser/printing/background_printing_manager.h",
      "//chrome/browser/printing/print_job.cc",
      "//chrome/browser/printing/print_job.h",
      "//chrome/browser/printing/print_job_manager.cc",
      "//chrome/browser/printing/print_job_manager.h",
      "//chrome/browser/printing/print_job_worker.cc",
      "//chrome/browser/printing/print_job_worker.h",
      "//chrome/browser/printing/print_job_worker_owner.cc",
      "//chrome/browser/printing/print_job_worker_owner.h",
      "//chrome/browser/printing/print_view_manager_base.cc",
      "//chrome/browser/printing/print_view_manager_base.h",
      "//chrome/browser/printing/print_view_manager_basic.cc",
      "//chrome/browser/printing/print_view_manager_basic.h",
      "//chrome/browser/printing/print_view_manager_common.cc",
      "//chrome/browser/printing/print_view_manager_common.h",
      "//chrome/browser/printing/printer_query.cc",
      "//chrome/browser/printing/printer_query.h",
      "//chrome/browser/printing/printing_init.cc",
      "//chrome/browser/printing/printing_init.h",
      "//chrome/browser/printing/printing_message_filter.cc",
      "//chrome/browser/printing/printing_message_filter.h",
    ]
    deps += [
      "//components/printing/browser",
      "//printing",
    ]

    if (enable_print_preview) {
      sources += [
        "chrome/browser/printing/print_error_dialog.cc",
        "//chrome/browser/printing/print_error_dialog.h",
        "//chrome/browser/printing/print_preview_data_service.cc",
        "//chrome/browser/printing/print_preview_data_service.h",
        "chrome/browser/printing/print_preview_dialog_controller.cc",
        "//chrome/browser/printing/print_preview_dialog_controller.h",
        "chrome/browser/printing/print_preview_message_handler.cc",
        "chrome/browser/printing/print_preview_message_handler.h",
        "//chrome/browser/printing/print_view_manager.cc",
        "//chrome/browser/printing/print_view_manager.h",
        "chrome/browser/ui/webui/print_preview/print_preview_ui.cc",
        "//chrome/browser/ui/webui/print_preview/print_preview_ui.h",
      ]
    }
  }

  if (enable_webrtc) {
    sources += [
      "chrome/browser/media/webrtc/media_capture_devices_dispatcher.cc",
      "chrome/browser/media/webrtc/media_capture_devices_dispatcher.h",
      "chrome/browser/media/webrtc/media_stream_capture_indicator.cc",
      "chrome/browser/media/webrtc/media_stream_capture_indicator.h",
    ]

    public_deps += [
      "//third_party/libyuv",
      "//third_party/webrtc/modules/desktop_capture",
    ]
  }

  if (enable_plugins) {
    sources += [
      "//chrome/browser/media/media_storage_id_salt.cc",
      "//chrome/browser/media/media_storage_id_salt.h",
      "//chrome/browser/renderer_host/pepper/chrome_browser_pepper_host_factory.cc",
      "//chrome/browser/renderer_host/pepper/chrome_browser_pepper_host_factory.h",
      "//chrome/browser/renderer_host/pepper/device_id_fetcher.cc",
      "//chrome/browser/renderer_host/pepper/device_id_fetcher.h",
      "//chrome/browser/renderer_host/pepper/monitor_finder_mac.h",
      "//chrome/browser/renderer_host/pepper/monitor_finder_mac.mm",
      "//chrome/browser/renderer_host/pepper/pepper_broker_message_filter.cc",
      "//chrome/browser/renderer_host/pepper/pepper_broker_message_filter.h",
      "//chrome/browser/renderer_host/pepper/pepper_flash_browser_host.cc",
      "//chrome/browser/renderer_host/pepper/pepper_flash_browser_host.h",
      "//chrome/browser/renderer_host/pepper/pepper_flash_clipboard_message_filter.cc",
      "//chrome/browser/renderer_host/pepper/pepper_flash_clipboard_message_filter.h",
      "//chrome/browser/renderer_host/pepper/pepper_flash_drm_host.cc",
      "//chrome/browser/renderer_host/pepper/pepper_flash_drm_host.h",
      "//chrome/browser/renderer_host/pepper/pepper_isolated_file_system_message_filter.cc",
      "//chrome/browser/renderer_host/pepper/pepper_isolated_file_system_message_filter.h",
      "//chrome/browser/renderer_host/pepper/pepper_platform_verification_message_filter.cc",
      "//chrome/browser/renderer_host/pepper/pepper_platform_verification_message_filter.h",
      "//chrome/browser/pepper_flash_settings_manager.cc",
      "//chrome/browser/pepper_flash_settings_manager.h",
      "//chrome/browser/plugins/chrome_plugin_service_filter.cc",
      "//chrome/browser/plugins/chrome_plugin_service_filter.h",
      "//chrome/browser/plugins/flash_temporary_permission_tracker.cc",
      "//chrome/browser/plugins/flash_temporary_permission_tracker.h",
      "//chrome/browser/plugins/flash_temporary_permission_tracker_factory.cc",
      "//chrome/browser/plugins/flash_temporary_permission_tracker_factory.h",
      "//chrome/browser/plugins/plugin_finder.cc",
      "//chrome/browser/plugins/plugin_finder.h",
      "//chrome/browser/plugins/plugin_info_host_impl.cc",
      "//chrome/browser/plugins/plugin_info_host_impl.h",
      "//chrome/browser/plugins/plugin_installer.cc",
      "//chrome/browser/plugins/plugin_installer.h",
      "//chrome/browser/plugins/plugin_metadata.cc",
      "//chrome/browser/plugins/plugin_metadata.h",
      "//chrome/browser/plugins/plugin_prefs.cc",
      "//chrome/browser/plugins/plugin_prefs.h",
      "//chrome/browser/plugins/plugin_prefs_factory.cc",
      "//chrome/browser/plugins/plugin_prefs_factory.h",
      "//chrome/browser/plugins/plugin_utils.cc",
      "//chrome/browser/plugins/plugin_utils.h",
      "//chrome/browser/plugins/plugins_field_trial.cc",
      "//chrome/browser/plugins/plugins_field_trial.h",
    ]

    if (enable_extensions) {
      sources += [
        "//chrome/browser/extensions/chrome_component_extension_resource_manager.cc",
        "//chrome/browser/extensions/chrome_component_extension_resource_manager.h",
        "chrome/browser/extensions/extension_util.cc",
        "//chrome/browser/extensions/extension_util.h",
        "chrome/browser/extensions/extension_tab_util.cc",
        "//chrome/browser/extensions/extension_tab_util.h",
        "//chrome/browser/extensions/api/cryptotoken_private/cryptotoken_private_api.cc",
        "//chrome/browser/extensions/api/cryptotoken_private/cryptotoken_private_api.h",
        "chrome/browser/extensions/api/messaging/incognito_connectability.cc",
        "//chrome/browser/extensions/api/messaging/incognito_connectability.h",
        "//chrome/browser/extensions/api/messaging/chrome_messaging_delegate.cc",
        "//chrome/browser/extensions/api/messaging/chrome_messaging_delegate.h",
        "//chrome/browser/extensions/api/messaging/native_message_port.cc",
        "//chrome/browser/extensions/api/messaging/native_message_port.h",
        "//chrome/browser/extensions/api/messaging/native_messaging_host_manifest.cc",
        "//chrome/browser/extensions/api/messaging/native_messaging_host_manifest.h",
        "//chrome/browser/extensions/api/messaging/native_messaging_policy_handler.cc",
        "//chrome/browser/extensions/api/messaging/native_messaging_policy_handler.h",
        "//chrome/browser/extensions/api/messaging/native_message_process_host.cc",
        "//chrome/browser/extensions/api/messaging/native_message_process_host.h",
        "//chrome/browser/extensions/api/messaging/native_process_launcher.cc",
        "//chrome/browser/extensions/api/messaging/native_process_launcher.h",
        "//chrome/browser/extensions/api/messaging/native_process_launcher_posix.cc",
        "//chrome/browser/extensions/api/messaging/native_process_launcher_win.cc",
        "//chrome/browser/extensions/api/proxy/proxy_api.cc",
        "//chrome/browser/extensions/api/proxy/proxy_api.h",
        "//chrome/browser/extensions/api/proxy/proxy_api_constants.cc",
        "//chrome/browser/extensions/api/proxy/proxy_api_constants.h",
        "//chrome/browser/extensions/api/proxy/proxy_api_helpers.cc",
        "//chrome/browser/extensions/api/proxy/proxy_api_helpers.h",
        "//chrome/browser/extensions/api/spellcheck/spellcheck_api.cc",
        "//chrome/browser/extensions/api/spellcheck/spellcheck_api.h",
        "//chrome/browser/extensions/api/tabs/tabs_constants.cc",
        "//chrome/browser/extensions/api/tabs/tabs_constants.h",
        "//chrome/browser/extensions/chrome_extension_api_frame_id_map_helper.cc",
        "//chrome/browser/extensions/chrome_extension_api_frame_id_map_helper.h",
        "chrome/browser/extensions/chrome_extension_function_details.cc",
        "//chrome/browser/extensions/event_router_forwarder.cc",
        "//chrome/browser/extensions/event_router_forwarder.h",
      ]

      deps += [
        "//components/spellcheck/browser",
        "//extensions/browser",
        "//rlz/features",
      ]
    }
    if (use_aura) {
      sources += [
        "//chrome/browser/ui/views/color_chooser_aura.cc",
        "//chrome/browser/ui/views/color_chooser_aura.h"
      ]
    }

    public_deps += [
      "//ppapi/host",
      "//ppapi/proxy",
    ]
  }
  if (enable_spellcheck) {
    sources += [
      "//chrome/browser/spellchecker/spell_check_host_chrome_impl.cc",
      "//chrome/browser/spellchecker/spell_check_host_chrome_impl.h",
      "//chrome/browser/spellchecker/spellcheck_custom_dictionary.cc",
      "//chrome/browser/spellchecker/spellcheck_custom_dictionary.h",
      "//chrome/browser/spellchecker/spellcheck_dictionary.h",
      "//chrome/browser/spellchecker/spellcheck_factory.cc",
      "//chrome/browser/spellchecker/spellcheck_factory.h",
      "//chrome/browser/spellchecker/spellcheck_hunspell_dictionary.cc",
      "//chrome/browser/spellchecker/spellcheck_hunspell_dictionary.h",
      "//chrome/browser/spellchecker/spellcheck_message_filter_platform_mac.cc",
      "//chrome/browser/spellchecker/spellcheck_service.cc",
      "//chrome/browser/spellchecker/spellcheck_service.h",
    ]
    deps += [
      "//components/spellcheck/browser",
      "//components/spellcheck/common:common",
    ]

    if (has_spellcheck_panel) {
      sources += [
        "//chrome/browser/spellchecker/spell_check_panel_host_impl.cc",
        "//chrome/browser/spellchecker/spell_check_panel_host_impl.h",
      ]
    }

    if (!is_android) {
      deps += [ "//third_party/hunspell" ]
    }
  }

  if (enable_cdm_storage_id) {
    sources += [
      "//chrome/browser/media/cdm_storage_id.cc",
      "//chrome/browser/media/cdm_storage_id.h",
    ]
  }
}

source_set("crashes_ui") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = [
    "//chrome/browser/ui/webui/crashes_ui.cc",
    "//chrome/browser/ui/webui/crashes_ui.h",
    "//chrome/browser/crash_upload_list/crash_upload_list.cc",
    "//chrome/browser/crash_upload_list/crash_upload_list.h",
  ]

  deps = [
    ":metrics",
    ":sessions",
    "//third_party/protobuf:protobuf_lite",
  ]
}

source_set("menu_bar") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = [
    "//chrome/browser/ui/views/frame/global_menu_bar_registrar_x11.cc",
    "//chrome/browser/ui/views/frame/global_menu_bar_registrar_x11.h"
  ]

  if (use_gio) {
    configs += [ "//build/linux:gio_config" ]

    deps = [
      "//components/sync",
      "//ipc:mojom",
      "//third_party/protobuf:protobuf_lite",
    ]
  }
}

source_set("devtools") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = [
    "//chrome/browser/devtools/devtools_contents_resizing_strategy.cc",
    "//chrome/browser/devtools/devtools_contents_resizing_strategy.h",
    "//chrome/browser/devtools/devtools_embedder_message_dispatcher.cc",
    "//chrome/browser/devtools/devtools_embedder_message_dispatcher.h",
    "//chrome/browser/devtools/devtools_file_system_indexer.cc",
    "//chrome/browser/devtools/devtools_file_system_indexer.h",
    "//chrome/browser/devtools/devtools_protocol.cc",
    "//chrome/browser/devtools/devtools_protocol.h",
    "//chrome/browser/devtools/url_constants.cc",
    "//chrome/browser/devtools/url_constants.h",
    "$root_gen_dir/chrome/browser/devtools/devtools_protocol_constants.cc",
    "$root_gen_dir/chrome/browser/devtools/devtools_protocol_constants.h",
  ]

  configs += [
    "//build/config/compiler:no_size_t_to_int_warning",
    "//build/config/compiler:wexit_time_destructors",
    "//build/config:precompiled_headers",
  ]

  deps = [
    "//base",
    "//content/public/browser",
    "//net",
    "//third_party/WebKit/public:features",
    "//ui/events:dom_keycode_converter",
    "//chrome/browser/devtools:devtools_protocol_constants",
  ]
}

source_set("importer") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = [
    "//chrome/browser/importer/external_process_importer_client.cc",
    "//chrome/browser/importer/external_process_importer_client.h",
    "//chrome/browser/importer/external_process_importer_host.cc",
    "//chrome/browser/importer/external_process_importer_host.h",
    "//chrome/browser/importer/firefox_profile_lock.cc",
    "//chrome/browser/importer/firefox_profile_lock.h",
    "//chrome/browser/importer/firefox_profile_lock_posix.cc",
    "//chrome/browser/importer/firefox_profile_lock_win.cc",
    "chrome/browser/importer/importer_list.cc",
    "//chrome/browser/importer/importer_list.h",
    "//chrome/browser/importer/importer_lock_dialog.h",
    "//chrome/browser/importer/importer_progress_observer.h",
    "//chrome/browser/importer/importer_uma.cc",
    "//chrome/browser/importer/importer_uma.h",
    "//chrome/browser/importer/in_process_importer_bridge.cc",
    "//chrome/browser/importer/in_process_importer_bridge.h",
    "//chrome/browser/importer/profile_writer.cc",
    "//chrome/browser/importer/profile_writer.h",
  ]

  deps = [
    "//chrome/common",
    "//chrome/utility",
    ":search_engines",
  ]
}

source_set("bookmarks") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  if (is_win) {
    cflags = [ "/wd4172", ]
  } else {
    cflags = [ "-Wnoreturn-stack-address" ]
  }

  sources = [
    "chrome/browser/bookmarks/bookmark_model_factory.cc",
    "//chrome/browser/bookmarks/bookmark_model_factory.h",
  ]

  deps = [
    "//components/bookmarks/browser",
    "//components/keyed_service/content",
    ":sessions",
  ]
}

source_set("search_engines") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = [
    "chrome/browser/search_engines/template_url_service_factory.cc",
    "//chrome/browser/search_engines/template_url_service_factory.h",
    "chrome/browser/search_engines/ui_thread_search_terms_data.cc",
    "//chrome/browser/search_engines/ui_thread_search_terms_data.h",
  ]

  deps = [
    ":sessions",
    "//components/keyed_service/content",
    "//components/search_engines",
    "//components/omnibox/browser",
  ]
}

source_set("sync") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = [
    "chrome/browser/sync/glue/sync_start_util.cc",
    "chrome/browser/sync/profile_sync_service_factory.cc"
  ]

  deps = [
    "//components/browser_sync",
    "//components/keyed_service/content",
    ":sessions",
  ]
}

source_set("web_data") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = [
    "//chrome/browser/web_data_service_factory.cc",
    "//chrome/browser/web_data_service_factory.h",
  ]

  deps = [
    ":sessions",
    "//components/keyed_service/content",
    "//components/webdata_services",
    ":sync",
    "//chrome/app:generated_resources",
  ]
}

source_set("password_manager") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  if (is_win) {
    all_dependent_configs = [ "//chrome/browser:browser_win_linker_flags" ]
  }

  sources = [
    "//chrome/browser/browsing_data/browsing_data_helper.h",
    "//chrome/browser/browsing_data/browsing_data_helper.cc",
    "//chrome/browser/password_manager/password_manager_util_win.h",
    "//chrome/browser/password_manager/password_manager_util_win.cc",
    "//chrome/browser/password_manager/password_store_factory.cc",
    "//chrome/browser/password_manager/password_store_factory.h",
    "//chrome/browser/password_manager/password_store_mac.h",
    "//chrome/browser/password_manager/password_store_mac.cc",
    "//chrome/browser/password_manager/password_store_win.h",
    "//chrome/browser/password_manager/password_store_win.cc",
  ]

  deps = [
    "//base",
    "//components/password_manager/content/browser",
    "//components/password_manager/core/browser",
    "//components/password_manager/core/common",
    "//components/prefs",
    "//content/public/browser",
    "//components/os_crypt",
  ]

  defines = [ ]

  if (is_linux) {
    if (use_x11) {
      sources += [
        "//chrome/browser/dbus/dbus_thread_linux.cc",
        "//chrome/browser/dbus/dbus_thread_linux.h",
        "//chrome/browser/password_manager/password_store_x.h",
        "//chrome/browser/password_manager/password_store_x.cc",
      ]
    }
    if (use_dbus) {
      deps += [ "//dbus" ]
    }

    if (use_gnome_keyring) {
      sources += [
        "//chrome/browser/password_manager/native_backend_gnome_x.cc",
        "//chrome/browser/password_manager/native_backend_gnome_x.h",
      ]
        configs += [ "//components/os_crypt:gnome_keyring" ]
    }

    # libsecret hard depends on GLib.
    if (use_glib) {
      sources += [
        "//chrome/browser/password_manager/native_backend_libsecret.cc",
        "//chrome/browser/password_manager/native_backend_libsecret.h",
      ]
      defines += [ "USE_LIBSECRET" ]
      deps += [ "//third_party/libsecret" ]
    }

    sources += [
      "//chrome/browser/password_manager/native_backend_kwallet_x.h",
      "//chrome/browser/password_manager/native_backend_kwallet_x.cc",
    ]
  }
}

source_set("downloads") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = [
    "//chrome/browser/background_fetch/background_fetch_delegate_factory.cc",
    "//chrome/browser/background_fetch/background_fetch_delegate_factory.h",
    "//chrome/browser/background_fetch/background_fetch_delegate_impl.cc",
    "//chrome/browser/background_fetch/background_fetch_delegate_impl.h",
    "//chrome/browser/background_fetch/background_fetch_download_client.cc",
    "//chrome/browser/background_fetch/background_fetch_download_client.h",
    "chrome/browser/download/download_core_service.cc",
    "//chrome/browser/download/download_core_service.h",
    "//chrome/browser/download/download_path_reservation_tracker.cc",
    "//chrome/browser/download/download_path_reservation_tracker.h",
    "chrome/browser/download/download_request_limiter.cc",
    "//chrome/browser/download/download_request_limiter.h",
    "//chrome/browser/download/download_service_factory.cc",
    "//chrome/browser/download/download_service_factory.h",
    "//chrome/browser/download/download_task_scheduler_impl.cc",
    "//chrome/browser/download/download_task_scheduler_impl.h",
  ]

  deps = [
    "//base",
    "//chrome/common",
    "//components/download/content/factory",
    "//components/download/public",
    "//content/public/browser",
    "//net",
    "//url",
  ]
}

source_set("favicon") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = [
    "//chrome/browser/favicon/chrome_favicon_client.cc",
    "//chrome/browser/favicon/chrome_favicon_client.h",
    "//chrome/browser/favicon/favicon_service_factory.cc",
    "//chrome/browser/favicon/favicon_service_factory.h",
    "//chrome/browser/favicon/favicon_utils.cc",
    "//chrome/browser/favicon/favicon_utils.h",
  ]

  deps = [
    "//content/public/browser",
    "//content/public/common",
    "//components/favicon/content",
    "//components/favicon/core",
    "//components/favicon_base",
    "//components/keyed_service/content",
    "//components/history/content/browser",
    "//components/history/core/browser",
    "//components/history/core/common",
    ":search",
  ]
}

source_set("metrics") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = [
    "//chrome/browser/metrics/chrome_metrics_service_accessor.cc",
    "//chrome/browser/metrics/chrome_metrics_service_accessor.h",
    "//chrome/browser/metrics/metrics_reporting_state.cc",
    "//chrome/browser/metrics/metrics_reporting_state.h",
    "//chrome/browser/metrics/thread_watcher.cc",
    "//chrome/browser/metrics/thread_watcher.h",
    "//chrome/browser/metrics/thread_watcher_report_hang.cc",
    "//chrome/browser/metrics/thread_watcher_report_hang.h",

    "//chrome/installer/util/google_update_settings.h",
    "//chrome/browser/google/google_update_settings_posix.cc",
  ]

  if (is_win) {
    sources += [
      "chrome/installer/util/muon_distribution.cc",
      "chrome/installer/util/muon_distribution.h",
    ]
  }

  deps = [
    "//base",
    "//chrome/browser/metrics/variations:chrome_ui_string_overrider_factory",
    "//chrome/common",
    "//components/metrics",
    "//components/metrics_services_manager",
    "//components/version_info",
    "//content/public/browser",
  ]

  if (is_mac) {
    deps += [
      "//third_party/crashpad/crashpad/client:client",
    ]
  }
}

source_set("search") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = [
    "chrome/browser/search/search.cc",
  ]

  deps = [
    "//content/public/common",
  ]
}

source_set("history") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = [
    "//chrome/browser/history/chrome_history_backend_client.cc",
    "//chrome/browser/history/chrome_history_backend_client.h",
    "//chrome/browser/history/chrome_history_client.cc",
    "//chrome/browser/history/chrome_history_client.h",
    "//chrome/browser/history/history_service_factory.cc",
    "//chrome/browser/history/history_service_factory.h",
    "//chrome/browser/history/history_tab_helper.cc",
    "//chrome/browser/history/history_tab_helper.h",
    "//chrome/browser/history/history_utils.cc",
    "//chrome/browser/history/history_utils.h",
  ]

  deps = [
    "//components/keyed_service/content",
    "//components/history/content/browser",
    "//components/history/core/browser",
    "//components/history/core/common",
    ":sessions",
    "chrome/browser/prerender",
  ]
}

source_set("lifetime") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = [
    "chrome/browser/lifetime/browser_close_manager.cc",
    "//chrome/browser/lifetime/browser_close_manager.h",
    "//chrome/browser/lifetime/termination_notification.cc",
    "//chrome/browser/lifetime/termination_notification.h",
    "//chrome/browser/lifetime/application_lifetime.cc",
    "//chrome/browser/lifetime/application_lifetime.h",
    "//chrome/browser/lifetime/application_lifetime_mac.mm",
    "//chrome/browser/lifetime/switch_utils.cc",
    "//chrome/browser/lifetime/switch_utils.h",

    "//chrome/browser/notifications/notification_ui_manager.h",
    "chrome/browser/notifications/notification_ui_manager_stub.cc",
    "chrome/browser/notifications/notification_ui_manager_stub.h"
  ]

  if (use_aura) {
    sources += [
      "//chrome/browser/lifetime/application_lifetime_aura.cc",
    ]
  }

  deps = [
    "//base",
    ":sessions",
    ":downloads",
    "//chrome/common",
    "//components/metrics",
    "//components/prefs",
    "//content/public/browser",
  ]

  if (is_win) {
    deps += [
      ":metrics",
    ]
  }
}

source_set("tab_manager") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]
  configs += [ "//build/config/compiler:no_size_t_to_int_warning" ]

  sources = [
    "//chrome/browser/defaults.cc",
    "//chrome/browser/defaults.h",
    "//chrome/browser/engagement/site_engagement_metrics.cc",
    "//chrome/browser/engagement/site_engagement_metrics.h",
    "//chrome/browser/engagement/site_engagement_score.cc",
    "//chrome/browser/engagement/site_engagement_score.h",
    "chrome/browser/engagement/site_engagement_service.cc",
    "//chrome/browser/memory/oom_memory_details.cc",
    "//chrome/browser/memory/oom_memory_details.h",
    "//chrome/browser/resource_coordinator/discard_metrics_util.cc",
    "//chrome/browser/resource_coordinator/discard_metrics_util.h",
    "//chrome/browser/resource_coordinator/page_signal_receiver.cc",
    "//chrome/browser/resource_coordinator/page_signal_receiver.h",
    "//chrome/browser/resource_coordinator/resource_coordinator_web_contents_observer.cc",
    "//chrome/browser/resource_coordinator/resource_coordinator_web_contents_observer.h",
    "//chrome/browser/resource_coordinator/tab_manager.cc",
    "//chrome/browser/resource_coordinator/tab_manager.h",
    "//chrome/browser/resource_coordinator/tab_manager_features.cc",
    "//chrome/browser/resource_coordinator/tab_manager_features.h",
    "//chrome/browser/resource_coordinator/tab_manager_resource_coordinator_signal_observer.cc",
    "//chrome/browser/resource_coordinator/tab_manager_resource_coordinator_signal_observer.h",
    "//chrome/browser/resource_coordinator/tab_manager_stats_collector.cc",
    "//chrome/browser/resource_coordinator/tab_manager_stats_collector.h",
    "//chrome/browser/resource_coordinator/tab_manager_web_contents_data.cc",
    "//chrome/browser/resource_coordinator/tab_manager_web_contents_data.h",
    "//chrome/browser/resource_coordinator/tab_stats.cc",
    "//chrome/browser/resource_coordinator/tab_stats.h",
    "//chrome/browser/resource_coordinator/time.cc",
    "//chrome/browser/resource_coordinator/time.h",
    "//chrome/browser/memory_details.cc",
    "//chrome/browser/memory_details.h",
    "//chrome/browser/memory_details_linux.cc",
    "//chrome/browser/memory_details_mac.cc",
    "//chrome/browser/memory_details_win.cc",
    "//chrome/browser/ui/browser_tab_strip_tracker.cc",
    "//chrome/browser/ui/browser_tab_strip_tracker.h",
    "chrome/browser/ui/tab_contents/core_tab_helper.cc",
    "//chrome/browser/ui/tab_contents/core_tab_helper.h",
    "//chrome/browser/ui/tabs/tab_strip_model.cc",
    "//chrome/browser/ui/tabs/tab_strip_model.h",
    "//chrome/browser/ui/tabs/tab_strip_model_delegate.h",
    "//chrome/browser/ui/tabs/tab_strip_model_observer.cc",
    "//chrome/browser/ui/tabs/tab_strip_model_observer.h",
    "//chrome/browser/ui/tabs/tab_strip_model_order_controller.cc",
    "//chrome/browser/ui/tabs/tab_strip_model_order_controller.h",
    "chrome/browser/ui/tabs/tab_utils.cc",
    "//chrome/browser/ui/tabs/tab_utils.h",
    "//chrome/browser/ui/tabs/web_contents_closer.cc",
    "//chrome/browser/ui/tabs/web_contents_closer.h",
    "//chrome/browser/ui/tab_contents/tab_contents_iterator.cc",
    "//chrome/browser/ui/tab_contents/tab_contents_iterator.h",
    "//chrome/browser/ui/tab_ui_helper.cc",
    "//chrome/browser/ui/tab_ui_helper.h",
  ]

  deps = [
    ":lifetime",
    "//components/feature_engagement:features",
    "//services/metrics",
  ]

  if (is_win || is_linux) {
    sources += [
      "//chrome/browser/feature_engagement/tracker_factory.cc",
      "//chrome/browser/feature_engagement/tracker_factory.h",
      "//chrome/browser/feature_engagement/feature_tracker.cc",
      "//chrome/browser/feature_engagement/feature_tracker.h",
      "//chrome/browser/feature_engagement/session_duration_updater.cc",
      "//chrome/browser/feature_engagement/session_duration_updater.h",
      "chrome/browser/feature_engagement/new_tab/new_tab_tracker.cc",
      "//chrome/browser/feature_engagement/new_tab/new_tab_tracker_factory.cc",
      "//chrome/browser/feature_engagement/new_tab/new_tab_tracker_factory.h",
      "chrome/browser/metrics/desktop_session_duration/desktop_session_duration_tracker.cc",
      "//chrome/browser/metrics/desktop_session_duration/desktop_session_duration_tracker.h",
    ]

    deps += [
      "//components/feature_engagement",
    ]
  }

  if (is_linux) {
    sources += [
      "//chrome/browser/icon_loader_auralinux.cc",
    ]
  }

  public_deps = [
    "//chrome/browser/engagement:mojo_bindings",
    "//chrome/common",
    "//third_party/WebKit/public:blink_headers",
  ]
}

source_set("sessions") {
  configs += [ "//electron/build:electron_config" ]
  configs += [ ":chromium_src_config" ]

  sources = [
    "//chrome/browser/profiles/incognito_helpers.cc",
    "//chrome/browser/profiles/incognito_helpers.h",
    "chrome/browser/profiles/profile.cc",
    "chrome/browser/profiles/profile.h",
    "chrome/browser/profiles/profile_io_data.cc",
    "//chrome/browser/profiles/profile_io_data.h",
    "chrome/browser/profiles/profile_manager.cc",
    "//chrome/browser/profiles/profile_manager.h",
    "chrome/browser/profiles/profile_metrics.cc",
    "//chrome/browser/profiles/profile_metrics.h",
    "chrome/browser/profiles/profiles_state.cc",
    "//chrome/browser/profiles/profiles_state.h",
    "chrome/browser/sessions/session_restore.cc",
    "//chrome/browser/sessions/session_restore.h",
    "//chrome/browser/sessions/session_tab_helper.cc",
    "//chrome/browser/sessions/session_tab_helper.h",
    "//chrome/browser/profiles/sql_init_error_message_ids.cc",
    "//chrome/browser/profiles/sql_init_error_message_ids.h",
  ]

  public_deps = [
    "//content/public/browser",
    "//content/public/common",
    "//net",
  ]

  deps = [
    "//chrome/app:generated_resources",
    "//third_party/icu",
    "//third_party/protobuf:protobuf_lite",
  ]
}
